implemrnt dry principle